# adaptive-mpc

./: README.md  hello.py  pyproject.toml
assets/rerun_plots/: angular_tracking.rbl
assets/unitree_go1/: go1.xml
scripts/: main.py  math_utils.py  view_model.py
src/adaptive_mpc/: math_utils.py  sim_utils.py  srb_control.py  utils.py
src/adaptive_mpc/go1/: __init__.py  constants.py  dynamics.py
