[project]
name = "adaptive-mpc"
version = "0.1.0"
description = "Adaptive MPC for quadruped control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "casadi>=3.7.0",
    "matplotlib>=3.10.1",
    "mujoco>=3.3.1",
    "numpy>=2.2.4",
    "rerun-sdk>=0.22.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
adaptive-mpc = "scripts.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_mpc"]
